--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ DEBUG=false
 VERBOSE=false
 
 # other模式
+
+# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式
