--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ ENCRYPTION_KEY=yourvite_secret_encryption_key_here
 # 调试模式
 DEBUG=false
 VERBOSE=false
+
+# other模式
+
+# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式# other模式
