--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "type": "git",
     "url": "git+https://github.com/Mr6pets/syncIDETool.git"
   },
-  "keywords": ["ide",
+  "keywords": [
+    "ide",
     "sync",
     "configuration",
     "trea",
     "vscode",
     "development",
-    "tools"],
+    "tools"
+  ],
   "author": "alvisliu",
   "license": "ISC",
   "bugs": {
@@ -41,10 +43,15 @@
     "diff": "^8.0.2",
     "dotenv": "^16.5.0",
     "fs-extra": "^11.3.0",
+    "inquirer": "^9.2.0",
     "install": "^0.13.0",
+    "open": "^9.1.0",
     "ora": "^8.2.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.0",
     "@types/node": "^24.0.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
